# ESP32_Playground

./: .gitignore  README.md  partitions.csv
__EXAMPLES/: Example_AP-Portal-DHCP.c
__EXAMPLES/components/: README.md
__EXAMPLES/components/beep/: beep.c
__EXAMPLES/components/gpio/: examples.c
__EXAMPLES/components/led/: blink.c
__EXAMPLES/components/littlefs_init/: CMakeLists.txt  littlefs_init.c
__EXAMPLES/components/littlefs_init/include/: littlefs_init.h
components/: README.md
components/access_point_wifi/: CMakeLists.txt  access_point_wifi.c
doc/: README.md
main/: CMakeLists.txt  blink.c  idf_component.yml  main.c
